--- a/web/templates/layout/basic.html
+++ b/web/templates/layout/basic.html
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'index' %}">SaaS</a>
+                <a class="navbar-brand" href="{% url 'index' %}">BugFlow</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
