文本信息实时修改更新

--- a/web/templates/issues_detail.html
+++ b/web/templates/issues_detail.html
@@ -309,6 +309,8 @@
     <script>
         var WIKI_UPLOAD_URL = "{% url 'wiki_upload' project_id=request.tracer.project.id %}";
         var ISSUES_RECORD_API = "{% url 'issues_record' project_id=request.tracer.project.id issues_id=issues_object.id %}";
+        var EDITOR
+        var ISSUES_CHANGE_API = "{% url 'issues_change' project_id=request.tracer.project.id issues_id=issues_object.id %}";
         $(function () {
             initDatePicker()
             initEditorMd()
@@ -316,6 +318,7 @@
             bindReply()
             bindCancelReplyUser()
             bindSubmit()
+            bindChangeIssues()
         })
 
         //初始化时间选择
@@ -329,7 +332,7 @@
         }
 
         function initEditorMd() {
-            editormd('editor', {
+            EDITOR = editormd('editor', {
                 placeholder: "请输入内容",
                 height: 300,
                 path: "{% static 'plugins/editor.md-master/lib/' %}",
@@ -351,7 +354,8 @@
         }
 
         function saveDesc() {
-            alert("OvO")
+            var postDict = {name: 'desc', value: EDITOR.getValue()};
+            postAjaxData(postDict)
         }
 
 
@@ -437,6 +441,39 @@
                 })
             })
 
+        }
+
+
+        //选项发生变更时界面问题同步更新消息
+        function bindChangeIssues() {
+            $('#editForm').find('.form-control').change(function () {
+                // 内容变更
+                var postDict = {name: $(this).attr('name'), value: $(this).val()};
+                postAjaxData(postDict)
+
+            });
+        }
+
+        // 捕捉产生的变更并将产生的变更统一发送到后台
+        function postAjaxData(postDict) {
+            $('#id_' + postDict.name).parent().next('.error-msg').text("");
+
+            $.ajax({
+                url: ISSUES_CHANGE_API,
+                type: "POST",
+                header: {
+                    "Content-Type": "application/json;charset=utf-8"
+                },
+                data: JSON.stringify(postDict),
+                dataType: "JSON",
+                success: function (res) {
+                    if (res.status) {
+                        createRecordNode(res.data);
+                    } else {
+                        $('#id_' + postDict.name).parent().next('.error-msg').text(res.error);
+                    }
+                }
+            })
         }
     </script>
 {% endblock %}
